# HW_WEB10_QUOTES

./: README.md  pyproject.toml
hw_quotes/hw_quotes/: settings.py  urls.py
hw_quotes/quotes/: forms.py  models.py  urls.py  utils.py  views.py
hw_quotes/quotes/static/quotes/: style.css
hw_quotes/quotes/templates/quotes/: add_quote.html  author_detail.html  base.html  edit_quote.html  index.html  tag_quotes.html
hw_quotes/quotes/templatetags/: extract.py
hw_quotes/users/: urls.py  views.py
hw_quotes/users/templates/users/: logout.html  signin.html  signup.html
hw_quotes/utils/: add_quotes_to_mongo.py
